[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Height25.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI_elements/UIButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Titlescreen_ROTARY_2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/PauseMenuButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
z_index = 10
script = ExtResource( 1 )

[node name="PauseMenuButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 34, 32 )
button_id = 1

[node name="PauseMenuButton2" parent="." instance=ExtResource( 5 )]
position = Vector2( 42, 1021 )
button_id = 2

[node name="PauseMenuButton3" parent="." instance=ExtResource( 5 )]
position = Vector2( 1742, 1025 )
button_id = 3

[node name="PauseMenuButton4" parent="." instance=ExtResource( 5 )]
position = Vector2( 1736, 42 )
button_id = 4

[node name="PauseMenuPanel" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="BG" type="TextureRect" parent="PauseMenuPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="MainPauseMenu" type="Control" parent="PauseMenuPanel"]
margin_right = 1920.0
margin_bottom = 1200.0
rect_min_size = Vector2( 1920, 1200 )

[node name="Title" type="Label" parent="PauseMenuPanel/MainPauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -672.0
margin_top = 410.0
margin_right = 672.0
margin_bottom = 616.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "PAUSA"
align = 1
valign = 1

[node name="ResumeButton" parent="PauseMenuPanel/MainPauseMenu" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = 48.5
margin_right = 288.0
margin_bottom = 127.5
text = "RIPRENDI"

[node name="BackToTitlescreen" parent="PauseMenuPanel/MainPauseMenu" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = 155.0
margin_right = 288.0
margin_bottom = 234.0
text = "TORNA AL MENU INZIALE"

[node name="VuoiDavvero" type="Control" parent="PauseMenuPanel"]
visible = false
margin_right = 1920.0
margin_bottom = 1200.0
rect_min_size = Vector2( 1920, 1200 )

[node name="Title" type="Label" parent="PauseMenuPanel/VuoiDavvero"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -672.0
margin_top = 384.0
margin_right = 672.0
margin_bottom = 590.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Vuoi davvero uscire?"
align = 1
valign = 1

[node name="SiButton" parent="PauseMenuPanel/VuoiDavvero" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -14.0
margin_right = 288.0
margin_bottom = 65.0
text = "SÃŒ"

[node name="NoButton" parent="PauseMenuPanel/VuoiDavvero" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = 95.5
margin_right = 288.0
margin_bottom = 174.5
text = "NO"

[connection signal="pause_button_pressed" from="PauseMenuButton" to="." method="pause_button_pressed"]
[connection signal="pause_button_released" from="PauseMenuButton" to="." method="pause_button_released"]
[connection signal="pause_button_pressed" from="PauseMenuButton2" to="." method="pause_button_pressed"]
[connection signal="pause_button_released" from="PauseMenuButton2" to="." method="pause_button_released"]
[connection signal="pause_button_pressed" from="PauseMenuButton3" to="." method="pause_button_pressed"]
[connection signal="pause_button_released" from="PauseMenuButton3" to="." method="pause_button_released"]
[connection signal="pause_button_pressed" from="PauseMenuButton4" to="." method="pause_button_pressed"]
[connection signal="button_pressed" from="PauseMenuPanel/MainPauseMenu/ResumeButton" to="." method="resume"]
[connection signal="button_pressed" from="PauseMenuPanel/MainPauseMenu/BackToTitlescreen" to="." method="show_vuoidavvero"]
[connection signal="button_pressed" from="PauseMenuPanel/VuoiDavvero/SiButton" to="." method="back_to_titlescreen"]
[connection signal="button_pressed" from="PauseMenuPanel/VuoiDavvero/NoButton" to="." method="hide_vuoidavvero"]
